[gd_scene load_steps=10 format=2]

[ext_resource path="res://player/pincer-shooter.png" type="Texture" id=1]
[ext_resource path="res://player/weapon.gd" type="Script" id=2]
[ext_resource path="res://lib/rope.gd" type="Script" id=3]
[ext_resource path="res://bullet_hell/pincer_shooter_bullet.tres" type="Resource" id=4]

[sub_resource type="VisualShaderNodeInput" id=7]
input_name = "modulate_color"

[sub_resource type="VisualShader" id=8]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Input:2
	vec3 n_out2p0 = MODULATE.rgb;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -561.749, -77.1658 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 7 )
nodes/fragment/2/position = Vector2( -416.876, 55.6826 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 8.61919, 5.46583, -8.61919, -5.46583, -38, -4, -9.98565, 10.301, 9.98565, -10.301, -40, -32, 0, 0, 0, 0, -9, -40 )
}

[sub_resource type="CircleShape2D" id=12]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
bullet_kit = ExtResource( 4 )
bullet_speed = 712.838

[node name="Rope" type="Path2D" parent="."]
modulate = Color( 0.0745098, 0.0666667, 0.117647, 1 )
self_modulate = Color( 1, 1, 1, 1 )
show_behind_parent = true
material = SubResource( 9 )
curve = SubResource( 6 )
script = ExtResource( 3 )

[node name="WeaponHead" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( -9, -31 )
texture = ExtResource( 1 )
offset = Vector2( 64, 0 )

[node name="ShootAnchor" type="Node2D" parent="WeaponHead"]
unique_name_in_owner = true
position = Vector2( 29, 0 )

[node name="Hitbox" type="Area2D" parent="WeaponHead"]
collision_layer = 16
collision_mask = 4

[node name="HitboxShape" type="CollisionShape2D" parent="WeaponHead/Hitbox"]
unique_name_in_owner = true
position = Vector2( 30, 0 )
scale = Vector2( 2.76084, -1.70034 )
shape = SubResource( 12 )

[connection signal="tree_exiting" from="Rope" to="Rope" method="_on_tree_exiting"]
[connection signal="area_entered" from="WeaponHead/Hitbox" to="." method="_on_Hitbox_area_entered"]
